--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 devel/
 logs/
 build/
+install/
 bin/
 lib/
 msg_gen/
@@ -38,9 +39,9 @@ srv/_*.py
 qtcreator-*
 *.user
 
-/planning/cfg
-/planning/docs
-/planning/src
+# /planning/cfg
+# /planning/docs
+# /planning/src
 
 *~
 
@@ -49,3 +50,6 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+# Clothoid-A
+.vscode/
