--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -3,6 +3,8 @@ name: PR Validate with Prebuilt Docker
 on:
   pull_request:
     branches: [ main ]
+  push:
+    branches: [ main ]
 
 permissions:
   contents: read
@@ -12,7 +14,26 @@ env:
   ROS_DISTRO: noetic
 
 jobs:
+  detect-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      src_changed: ${{ steps.filter.outputs.src }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Paths filter
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            src:
+              - 'src'
+
   build-test:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.src_changed == 'true'
     runs-on: [self-hosted, linux, docker]
     steps:
       - name: Checkout
@@ -25,14 +46,16 @@ jobs:
       - name: catkin_make inside container
         run: |
           docker run --rm \
-            -v "${{ github.workspace }}:/catkin_ws" \
-            -w /catkin_ws \
+            -v "${{ github.workspace }}/src:/catkin_ws/src:ro" \
             "$IMAGE" \
             bash -lc '
               set -e
               source /opt/ros/$ROS_DISTRO/setup.bash
               apt-get update
               rosdep update
+              mkdir -p /tmp/ws/src
+              cp -a /catkin_ws/src/. /tmp/ws/src/
+              cd /tmp/ws
               rosdep install --from-paths src --ignore-src -r -y
               catkin_make -DCMAKE_BUILD_TYPE=Release
             '
