Update github action

--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -24,11 +24,11 @@ jobs:
 
       - name: catkin_make inside container
         run: |
-          UID=$(id -u)
-          GID=$(id -g)
+          RUN_UID=$(id -u)
+          RUN_GID=$(id -g)
           docker run --rm \
-            -u ${UID}:${GID} \
-            -v "${{ github.workspace }}:/catkin_ws" \
+            -u ${RUN_UID}:${RUN_GID} \
+            -v "${{ github.workspace }}/src:/catkin_ws/src" \
             -w /catkin_ws \
             "$IMAGE" \
             bash -lc '
