--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,6 +1,8 @@
 name: Build & Push Docker (on main, when Dockerfile changes)
 
 on:
+  pull_request:
+    branches: [ main ]
   push:
     branches: [ main ]
 
