Update github action

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -49,14 +49,16 @@ jobs:
       - name: Smoke test (catkin_make)
         run: |
           docker run --rm \
-            -v "${{ github.workspace }}:/catkin_ws" \
-            -w /catkin_ws \
-            $IMAGE:$TAG \
+            -v "${{ github.workspace }}/src:/catkin_ws/src:ro" \
+            "$IMAGE" \
             bash -lc '
               set -e
               source /opt/ros/$ROS_DISTRO/setup.bash
               apt-get update
               rosdep update
+              mkdir -p /tmp/ws/src
+              cp -a /catkin_ws/src/. /tmp/ws/src/
+              cd /tmp/ws
               rosdep install --from-paths src --ignore-src -r -y
               catkin_make -DCMAKE_BUILD_TYPE=Release
             '
