--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           filters: |
             src:
-              - 'src'
+              - 'src/**'
 
   build-test:
     needs: detect-changes
