--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -31,7 +31,7 @@ jobs:
   build-push:
     needs: detect-changes
     if: needs.detect-changes.outputs.dockerfile_changed == 'true'
-    runs-on: [self-hosted, linux, docker]
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -42,13 +42,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Docker Hub 로그인 (필수: 저장소 시크릿에 사용자/토큰 추가)
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build image
         run: |
-          docker build -t $IMAGE:$TAG -t $IMAGE:latest ./docker
+          sudo docker build -t "$IMAGE:$TAG" -t "$IMAGE:latest" ./docker
 
       - name: Smoke test (catkin_make)
         run: |
-          docker run --rm \
+          sudo docker run --rm \
             -v "${{ github.workspace }}/src:/catkin_ws/src:ro" \
             "$IMAGE" \
             bash -lc '
@@ -63,4 +70,4 @@ jobs:
 
       - name: Push images
         run: |
-          docker push $IMAGE:$TAG
+          sudo docker push "$IMAGE:$TAG"
