--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -46,16 +46,16 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: junspring
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build image
         run: |
-          sudo docker build -t "$IMAGE:$TAG" -t "$IMAGE:latest" ./docker
+          docker build -t "$IMAGE:$TAG" -t "$IMAGE:latest" ./docker
 
       - name: Smoke test (catkin_make)
         run: |
-          sudo docker run --rm \
+          docker run --rm \
             -v "${{ github.workspace }}/src:/catkin_ws/src:ro" \
             "$IMAGE" \
             bash -lc '
@@ -70,4 +70,4 @@ jobs:
 
       - name: Push images
         run: |
-          sudo docker push "$IMAGE:$TAG"
+          docker push "$IMAGE:$TAG"
